# rrscrape

./: .gitignore  README.md  pyproject.toml
assets/: colab_streamlit.ipynb
rrscrape/: app.py  consts.py  general_utils.py  scrape.py
rrscrape/scrape-dev/: images.py  scrape_amazon.py
